--- a/exercicios/modulo-03/ex022/fundo006.html
+++ b/exercicios/modulo-03/ex022/fundo006.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            height: 100vh; /* altura */
+            background-color: black; /* Fundo */
+            background-image: url('imagens/wallpaper002.jpg');
+            background-position: center top;
+            background-repeat: no-repeat;
+            background-size: cover/* cobrir (vai cobrir a tela inteira) */;
+        }
+        main {
+            background-color: white; /* Fundo */
+            width: 400px;  /* largura */
+            padding: 10px; /* preenchimento */
+            margin: auto; 
+            border: 1px solid darkslateblue;
+            border-radius: 15px; /* raio da borda */
+        }
+    </style>
 </head>
 <body>
     <main>
