--- a/exercicios/modulo-03/ex022/fundo006.html
+++ b/exercicios/modulo-03/ex022/fundo006.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de tela</title>
     <style>
         body {
             height: 100vh; /* altura */
@@ -29,6 +29,12 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui est natus pariatur soluta aut quibusdam dignissimos autem officia atque odio quis recusandae veritatis, accusantium aliquam vel rem harum iure dolore? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor cupiditate corrupti sit quae. Atque eaque magni corrupti itaque sequi officiis maiores omnis aperiam qui nam. Odit in eum laboriosam provident. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet dolor voluptas iusto nisi fugiat molestiae repudiandae, consectetur, quibusdam debitis similique voluptatibus! Iste nemo incidunt fuga molestiae explicabo doloribus blanditiis reprehenderit!
         Libero soluta, animi facere autem in veritatis minus? Quae alias pariatur exercitationem numquam nesciunt modi fugit officia. Dignissimos facilis necessitatibus molestiae ab a alias neque illo est, sed, ducimus modi!
         Labore, laboriosam aliquam quos minima dolor totam laborum error cum id earum. Ipsam, eum similique sed tempore provident repellendus libero alias beatae molestias nihil reiciendis est, earum iste doloremque commodi.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam quia ipsam, eum aliquam ullam, dignissimos voluptatibus facilis molestias odio nesciunt sequi provident. Necessitatibus adipisci corrupti beatae ex numquam, eligendi quia!
+        Eaque, veniam numquam pariatur, cum magnam quasi totam dolorem alias doloremque consequatur magni nihil facilis error vero dignissimos earum? Cum, saepe! Provident dicta eius, iure ad voluptatum sapiente minima eaque.
+        Eum, quos? Magni, aliquam praesentium consequatur ipsa ut optio ea necessitatibus, fugiat, reiciendis accusamus a id sint veniam. Debitis atque quos repellat eos sed pariatur sit eligendi eveniet ab rem. Lorem, ipsum dolor. Lorem, ipsum dolor.</p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam quia ipsam, eum aliquam ullam, dignissimos voluptatibus facilis molestias odio nesciunt sequi provident. Necessitatibus adipisci corrupti beatae ex numquam, eligendi quia!
+        Eaque, veniam numquam pariatur, cum magnam quasi totam dolorem alias doloremque consequatur magni nihil facilis error vero dignissimos earum? Cum, saepe! Provident dicta eius, iure ad voluptatum sapiente minima eaque.
+        Eum, quos? Magni, aliquam praesentium consequatur ipsa ut optio ea necessitatibus, fugiat, reiciendis accusamus a id sint veniam. Debitis atque quos repellat eos sed pariatur sit eligendi eveniet ab rem. Lorem, ipsum dolor. Lorem, ipsum dolor.</p>
     </main>
 </body>
 </html>
