--- a/desafio/012/index.html
+++ b/desafio/012/index.html
@@ -122,7 +122,7 @@
         </p>
     </section>
     <footer>
-
+        <p>site criado por <a href="https://github.com/Eduardo-DK" target="_blank">Eduardo Drudack</a> para o <a href="https://www.cursoemvideo.com" target="_blank">curso em video</a></p>
     </footer>
 </body>
 </html>
