--- a/desafio/012/index.html
+++ b/desafio/012/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel Moderno</title>
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
     <head>
@@ -20,7 +21,7 @@
         Antes que eu caduque<br>
         Vou dizer tudo em poesia.<br>
         </p>
-    </section class="normal">
+    </section class="imagem">
     <section>
         <p>
             Estou ficando cansado<br>
@@ -42,8 +43,6 @@
             Antes que eu caduque<br>
             Vou dizer tudo em poesia.<br>
         </p>
-    </section>
-    <section class="normal">
         <p>
             Estou ficando cansado<br>
             Da tal tecnologia<br>
@@ -54,7 +53,7 @@
             Vou dizer tudo em poesia.<br>
         </p>
     </section>
-    <section class="normal">
+    <section class="imagem">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado<br>
@@ -64,7 +63,8 @@
             Basta botar uma flor<br>
             E um coração desenhado.<br>
         </p>
-    </section>
+    </section>    
+    
     <section class="normal">
         <p>
             Arroba agora não pesa<br>
@@ -75,8 +75,6 @@
             Se o saite é muito bom<br>
             Ele vale um alto preço.<br>
         </p>
-    </section>
-    <section class="normal">
         <p>
             Pra piorar a liguagem<br>
             O emoticom é um risco<br>
@@ -87,7 +85,7 @@
             Decifre esse rabisco.<br>
         </p>
     </section>
-    <section class="normal">
+    <section class="imagem">
         <p>
             Tenho saudade das cartas<br>
             Escritas com a própria mão<br>
@@ -108,9 +106,6 @@
             O mundo ficou cativo<br>
             Da tecnologia do agora.<br>
         </p>
-    </section>
-
-    <section class="normal">
         <p>
             Felizmente, pra orar<br>
             Não precisa de internet<br>
