--- a/desafio/012/index.html
+++ b/desafio/012/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
-    <head>
+    <header>
         <h1>Cordel Moderno</h1>
         <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
-    </head>
+    </header>
     <section class="normal">
         <p>
         Estou ficando cansado<br>
@@ -20,17 +20,6 @@
         Twitter e Facebook<br>
         Antes que eu caduque<br>
         Vou dizer tudo em poesia.<br>
-        </p>
-    </section class="imagem">
-    <section>
-        <p>
-            Estou ficando cansado<br>
-            Da tal tecnologia<br>
-            Só se fala por e-mail<br>
-            Mensagem curta e fria<br>
-            Twitter e Facebook<br>
-            Antes que eu caduque<br>
-            Vou dizer tudo em poesia.<br>
         </p>
     </section>
     <section class="normal">
