--- a/desafio/012/index.html
+++ b/desafio/012/index.html
@@ -13,16 +13,14 @@
     </header>
     <section class="normal">
         <p>
-        Estou ficando cansado<br>
-        Da tal tecnologia<br>
-        Só se fala por e-mail<br>
-        Mensagem curta e fria<br>
-        Twitter e Facebook<br>
-        Antes que eu caduque<br>
-        Vou dizer tudo em poesia.<br>
+            Estou ficando cansado<br>
+            Da tal tecnologia<br>
+            Só se fala por e-mail<br>
+            Mensagem curta e fria<br>
+            Twitter e Facebook<br>
+            Antes que eu caduque<br>
+            Vou dizer tudo em poesia.
         </p>
-    </section>
-    <section class="normal">
         <p>
             Estou ficando cansado<br>
             Da tal tecnologia<br>
@@ -42,7 +40,7 @@
             Vou dizer tudo em poesia.<br>
         </p>
     </section>
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado<br>
@@ -74,7 +72,7 @@
             Decifre esse rabisco.<br>
         </p>
     </section>
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas<br>
             Escritas com a própria mão<br>
